--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+    margin: 0;
+    font: inherit;
+}
+
+body {
+    color: var(--main-text-color);
+    font-family: 'Montserrat', sans-serif;
+}
+
 :root {
     /* Fonts */
     --font-xs: 12px;
