--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+    margin: 0;
+    font: inherit;
+}
+
 :root {
     /* Fonts */
     --font-xs: 12px;
@@ -18,4 +36,16 @@
     --warning-color: red;
     /* Heights */
     --navbar-height: 70px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
+    color: inherit;
 }
