--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ select {
 body {
     color: var(--main-text-color);
     font-family: 'Montserrat', sans-serif;
+    background-color: var(--main-bg-color);
 }
 
 :root {
@@ -41,4 +42,12 @@ body {
     --warning-color: red;
     /* Heights */
     --navbar-height: 70px;
+}
+
+a,
+a:hover,
+a:active,
+a:focus,
+a:visited {
+    text-decoration: none;
 }
