--- a/src/modules/Footer/Footer.module.css
+++ b/src/modules/Footer/Footer.module.css
@@ -108,5 +108,8 @@
             "phone"
             "email"
             "socialIcons";
+
+        display: flex;
+        flex-direction: column;
     }
 }
