--- a/src/modules/common/components/SocialIcons/SocialIcons.module.css
+++ b/src/modules/common/components/SocialIcons/SocialIcons.module.css
@@ -1,5 +1,7 @@
 .socials {
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
+    height: 100%;
     display: flex;
     justify-content: space-around;
 }
@@ -29,7 +31,6 @@
     .item {
         display: flex;
         align-items: center;
-        font-size: 3rem;
         transition: 0.2s ease;
         color: var(--main-text-color);
         /* white; */
