--- a/src/modules/Gallery/Gallery.module.css
+++ b/src/modules/Gallery/Gallery.module.css
@@ -1,11 +1,14 @@
-.app__gallery {
+.wrapper {
     display: flex;
     flex-direction: row;
     background: var(--color-black);
     padding: 4rem 0 4rem 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.app__gallery-content {
+.content {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -15,11 +18,48 @@
     padding-right: 2rem;
 }
 
+.headText {
+    font-family: var(--font-base);
+    color: var(--color-golden);
+    font-size: 64px;
+    line-height: 83.2px;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+}
+
+.introduction {
+    font-family: var(--font-alt);
+    color: var(--color-white);
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    line-height: 28px;
+    font-size: 16px;
+    margin-top: 2rem;
+}
+
+.viewButton {
+    background-color: var(--accent-color);
+    color: var(--color-black);
+    font-family: var(--font-base);
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    line-height: 28px;
+    font-size: 16px;
+    padding: 0.5rem 1.5rem;
+    border-radius: 1px;
+    border: none;
+    outline: 5px solid var(--accent-color);
+    box-shadow: 0 0 10px var(--accent-color);
+    outline-style: double;
+    cursor: pointer;
+}
+
 .app__gallery-content button {
     margin-top: 1rem;
 }
 
-.app__gallery-images {
+.galleryImages {
     flex: 1;
     display: flex;
     flex-direction: row;
@@ -27,7 +67,7 @@
     position: relative;
 }
 
-.app__gallery-images_container {
+.imagesContainer {
     display: flex;
     flex-direction: row;
     width: max-content;
@@ -36,18 +76,21 @@
     scrollbar-width: none;
 }
 
-.app__gallery-images_container::-webkit-scrollbar {
+.imagesContainer::-webkit-scrollbar {
     display: none;
 }
 
-.app__gallery-images_card {
+.imagesCard {
     position: relative;
     min-width: 301px;
     height: 447px;
     margin-right: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.gallery__image-icon {
+.imageIcon {
     position: absolute;
     color: #fff;
     font-size: 2rem;
@@ -56,7 +99,7 @@
     cursor: pointer;
 }
 
-.app__gallery-images_card img {
+.imagesCard img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -64,15 +107,15 @@
     transition: 0.5s ease;
 }
 
-.app__gallery-images_card:hover img {
+.imagesCard:hover img {
     opacity: 0.35;
 }
 
-.app__gallery-images_card:hover .gallery__image-icon {
+.imagesCard:hover .imageIcon {
     opacity: 1;
 }
 
-.app__gallery-images_arrows {
+.imagesArrows {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -82,7 +125,7 @@
     bottom: 5%;
 }
 
-.gallery__arrow-icon {
+.arrowIcon {
     color: var(--color-golden);
     font-size: 2rem;
     cursor: pointer;
@@ -95,44 +138,48 @@
 }
 
 @media screen and (min-width: 2000px) {
-    .app__gallery-content {
+    .content {
         min-width: 1000px;
         padding-right: 4rem;
     }
 
-    .app__gallery-images_card {
+    .imagesCard {
         min-width: 400px;
         height: 550px;
     }
 }
 
 @media screen and (max-width: 1150px) {
-    .app__gallery {
+    .wrapper {
         flex-direction: column;
     }
 
-    .app__gallery-images {
+    .galleryImages {
         max-width: 100%;
         margin: 5rem 0;
     }
 }
 
 @media screen and (max-width: 850px) {
-    .app__gallery {
+    .wrapper {
         padding: 4rem 0rem 4rem 4rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .app__gallery {
+    .wrapper {
         padding: 4rem 0rem 4rem 2rem;
     }
 
-    .app__gallery-content {
+    .content {
         min-width: 100%;
     }
 
-    .app__gallery-images_card {
+    .viewButton {
+        margin-top: 1rem;
+    }
+
+    .imagesCard {
         min-width: 240px;
         height: 320px;
     }
