--- a/src/modules/Navigation/components/Burger/ui/BurgerCta/BurgerCta.module.css
+++ b/src/modules/Navigation/components/Burger/ui/BurgerCta/BurgerCta.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     width: fit-content;
     height: 100%;
-    max-height: 100px;
+    max-height: 120px;
 }
