--- a/src/modules/Navigation/components/Burger/ui/BurgerNav/BurgerNav.module.css
+++ b/src/modules/Navigation/components/Burger/ui/BurgerNav/BurgerNav.module.css
@@ -8,6 +8,7 @@
     opacity: 0;
     transition: opacity 250ms cubic-bezier(0.5, 0, 0.5, 1);
     height: 100vh;
+    pointer-events: none;
 }
 
 .video {
