--- a/src/modules/common/components/NeonButton/NeonButton.module.css
+++ b/src/modules/common/components/NeonButton/NeonButton.module.css
@@ -1,21 +1,14 @@
-.btn {
-
-    display: inline-block;
-    cursor: pointer;
-    text-decoration: none;
+.neon {
     color: var(--accent-color);
-    border: var(--accent-color) 1.25px solid;
-    padding: 4px 16px;
-    border-radius: 4px;
-
+    border: var(--accent-color) 2px solid;
     text-shadow: 0 0 2px hsl(0 0% 100% / 0.3), 0 0 9px currentColor;
-
     box-shadow: inset 0 0 20px 0 var(--accent-color), 0 0 20px 0 var(--accent-color);
-
     position: relative;
+    font-weight: 500;
+    animation: breathe 4s ease-out infinite;
 }
 
-.btn::before {
+.withGroundReflection.neon::before {
     pointer-events: none;
     content: "";
     position: absolute;
@@ -24,13 +17,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-
     transform: perspective(64px) rotateX(40deg) scale(1, 0.35);
     filter: blur(64px);
     opacity: 0.7;
 }
 
-.btn::after {
+.neon::after {
     content: "";
     position: absolute;
     top: 0;
@@ -44,81 +36,35 @@
     transition: opacity 100ms linear;
 }
 
-.btn:hover,
-.neon-button:focus {
+.neon:hover,
+.neon:focus {
     color: rgba(255, 255, 255, 0.762);
     text-shadow: none;
 }
 
-.btn:hover::before,
-.btn:focus::before {
+.neon:hover::before,
+.neon:focus::before {
     opacity: 1;
 }
 
-.btn:hover::after,
-.btn:focus::after {
+.neon:hover::after,
+.neon:focus::after {
     opacity: 1;
 }
 
-/* .btn {
-    font-size: 4rem;
+@keyframes breathe {
+    0% {
+        text-shadow: 0 0 2px hsl(0 0% 100% / 0.3), 0 0 9px currentColor;
+        box-shadow: inset 0 0 20px 0 var(--accent-color), 0 0 20px 0 var(--accent-color);
+    }
 
-    display: inline-block;
-    cursor: pointer;
-    text-decoration: none;
-    color: var(--accent-color);
-    border: var(--accent-color) 0.125em solid;
-    padding: 0.25em 1em;
-    border-radius: 0.25em;
+    50% {
+        text-shadow: 0 0 4px hsl(0 0% 100% / 0.5), 0 0 18px currentColor;
+        box-shadow: inset 0 0 30px 0 var(--accent-color), 0 0 30px 0 var(--accent-color);
+    }
 
-    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-
-    box-shadow: inset 0 0 0.5em 0 var(--accent-color), 0 0 0.5em 0 var(--accent-color);
-
-    position: relative;
+    100% {
+        text-shadow: 0 0 2px hsl(0 0% 100% / 0.3), 0 0 9px currentColor;
+        box-shadow: inset 0 0 20px 0 var(--accent-color), 0 0 20px 0 var(--accent-color);
+    }
 }
-
-.btn::before {
-    pointer-events: none;
-    content: "";
-    position: absolute;
-    background: var(--accent-color);
-    top: 120%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
-    filter: blur(1em);
-    opacity: 0.7;
-}
-
-.btn::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    box-shadow: 0 0 2em 0.5em var(--accent-color);
-    opacity: 0;
-    background-color: var(--accent-color);
-    z-index: -1;
-    transition: opacity 100ms linear;
-}
-
-.btn:hover,
-.neon-button:focus {
-    color: rgba(255, 255, 255, 0.762);
-    text-shadow: none;
-}
-
-.btn:hover::before,
-.btn:focus::before {
-    opacity: 1;
-}
-
-.btn:hover::after,
-.btn:focus::after {
-    opacity: 1;
-} */
