--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -2,17 +2,19 @@
     position: fixed;
     background-color: transparent;
     width: 100%;
-    min-height: 70px;
+    min-height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 5;
+    transition: all 0.5s ease;
 }
 
 .isScrolled {
     background-color: var(--navbar-bg-color);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+    min-height: 30px;
 }
 
 .container {
