--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -36,12 +36,17 @@
 }
 
 .logo {
-    width: 100%;
+    width: 200px;
+    margin-left: 1rem;
 }
 
 @media (max-width: 960px) {
     .logoContainer {
         position: fixed;
         top: 1.5rem;
+    }
+
+    .logo {
+        width: 150px
     }
 }
