--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,8 @@ body {
     --navbar-height: 70px;
 
     /* Swiper */
-    --dark: #070707;
     --sizeindex: calc(1vw + 1vh);
-    --transition: .75s cubic-bezier(.2, .6, 0, 1);
+    --swiper-transition: .75s cubic-bezier(.2, .6, 0, 1);
 }
 
 a,
