--- a/src/modules/HeroGallery/ui/HeroGallery.module.css
+++ b/src/modules/HeroGallery/ui/HeroGallery.module.css
@@ -1,6 +1,15 @@
 .wrapper {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
     overflow: hidden;
-    line-height: 1.8;
+    /* 
+    border: 1px solid red; */
+    padding: 0 20px;
 }
+
+.container {
+    border: 1px solid darkmagenta;
+    position: relative;
+    min-height: 100vh;
+}
+
+@media (min-width:481px) {}
