--- a/src/modules/HeroGallery/ui/components/Hero/Hero.module.css
+++ b/src/modules/HeroGallery/ui/components/Hero/Hero.module.css
@@ -1,26 +1,32 @@
 .description {
-    position: absolute;
     font-size: calc(var(--sizeindex) * .8);
-    top: 20vh;
-    left: 8vw;
-    max-width: 24vw;
-    transition: opacity var(--transition), transform var(--transition);
+    /* top: 200px;
+    left: 8vw; */
+    transition: opacity var(--swiper-transition), transform var(--swiper-transition);
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo {
-    font-size: calc(var(--sizeindex) * 3.6);
+    font-size: 48px;
     font-weight: 900;
     display: inline-block;
-    background: linear-gradient(45deg, DarkMagenta, Tomato, Violet);
+    /* background: linear-gradient(45deg, DarkMagenta, Tomato, Violet); 
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;*/
+    color: var(--accent-color);
+    margin-bottom: 10px;
+
 }
 
 .description p {
     opacity: .9;
-    transition: transform var(--transition);
+    transition: transform var(--swiper-transition);
     transition-duration: 3s;
+    margin-bottom: 10px;
 }
 
 .description.hidden {
