--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
     color: var(--main-text-color);
     font-family: 'Montserrat', sans-serif;
     background-color: var(--main-bg-color);
+
+    overflow-x: hidden;
 }
 
 :root {
