--- a/src/modules/HeroGallery/ui/components/Gallery/Gallery.module.css
+++ b/src/modules/HeroGallery/ui/components/Gallery/Gallery.module.css
@@ -1,5 +1,11 @@
 .container {
     border: 1px solid red;
     width: 100%;
-    height: 500px;
+    height: 200px;
+}
+
+@media(min-width:481px) {
+    .container {
+        height: 500px;
+    }
 }
