--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -1,22 +1,20 @@
 .wrapper {
     height: 100vh;
     width: 100vw;
-    background-color: black;
     margin: 0rem;
     overflow: hidden;
+    position: relative;
 }
 
 .imageTrack {
     display: flex;
     gap: 4vmin;
     position: absolute;
-    left: 50%;
+    left: 0%;
     top: 50%;
     transform: translate(0%, -50%);
     user-select: none;
     width: 100%;
     height: 100%;
-    /* -- Prevent image highlighting -- */
-    /*  overflow: hidden; */
     transition: transform 1200ms;
 }
