--- a/src/modules/HeroGallery/ui/components/Hero/Hero.module.css
+++ b/src/modules/HeroGallery/ui/components/Hero/Hero.module.css
@@ -1,11 +1,11 @@
 .description {
     font-size: calc(var(--sizeindex) * .8);
     transition: opacity var(--swiper-transition), transform var(--swiper-transition);
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .logo {
@@ -29,7 +29,21 @@
 }
 
 
-@media(min-width: 960px) {
+@media (min-width: 481px) {
+    .description {
+        position: absolute;
+        width: 400px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 3;
+    }
+}
+
+@media(min-width: 961px) {
+
+
     .description.hidden {
         opacity: 0;
         transform: translateY(5vh);
