--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -1,20 +1,17 @@
-.wrapper {
-    height: 100vh;
-    width: 100vw;
-    margin: 0rem;
-    overflow: hidden;
-    position: relative;
+.container {
+    width: 100%;
+    height: 250px;
+    margin: 50px 0;
 }
 
-.imageTrack {
-    display: flex;
-    gap: 4vmin;
-    position: absolute;
-    left: 0%;
-    top: 50%;
-    transform: translate(0%, -50%);
-    user-select: none;
-    width: 100%;
-    height: 100%;
-    transition: transform 1200ms;
+@media(min-width:481px) {
+    .container {
+        height: 300px;
+    }
+}
+
+@media(min-width:650px) {
+    .container {
+        height: 400px;
+    }
 }
