--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -7,11 +7,11 @@
     justify-content: center;
     align-items: center;
     z-index: 5;
-    transition: all 0.5s ease;
+    transition: all 0.6s ease-in-out;
 }
 
 .isScrolled {
-    background-color: var(--navbar-bg-color);
+    background-color: black;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     min-height: 30px;
