--- a/src/modules/Main/ui/Main.module.css
+++ b/src/modules/Main/ui/Main.module.css
@@ -21,7 +21,8 @@
 }
 
 .title {
-    width: 200px;
+    font-size: 48px;
+    line-height: 1;
     margin-bottom: 20px;
 }
 
@@ -34,11 +35,6 @@
 
 .btnContainer {
     display: flex;
-}
-
-.logo {
-    max-width: 250px;
-    margin-bottom: 20px;
 }
 
 .btnContainer>* {
