--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -7,14 +7,14 @@
     justify-content: center;
     align-items: center;
     z-index: 5;
-    transition: all 0.6s ease-in-out;
+    transition: all 0.6s linear;
 }
 
 .isScrolled {
-    background-color: black;
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-    min-height: 30px;
+    background-color: var(--navbar-bg-color);
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    min-height: 20px;
 }
 
 .container {
