made scale animation fo navbar

--- a/src/modules/Navigation/components/Navbar/ui/Navbar.module.css
+++ b/src/modules/Navigation/components/Navbar/ui/Navbar.module.css
@@ -17,6 +17,7 @@
     .navBar {
         width: 100%;
         display: flex;
+        max-height: 30px;
         justify-content: flex-end;
         align-items: center;
         margin-left: 40px;
