--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -2,19 +2,18 @@
     position: fixed;
     background-color: transparent;
     width: 100%;
-    min-height: 80px;
+    min-height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 5;
-    transition: all 0.6s linear;
+    transition: all 0.3s linear;
 }
 
 .isScrolled {
     background-color: var(--navbar-bg-color);
     -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    min-height: 20px;
 }
 
 .container {
@@ -29,12 +28,19 @@
 
 .logoContainer {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     max-width: max-content;
+    min-height: 80px;
     margin-left: 20px;
     font-size: 26px;
     font-weight: 700;
+    transition: all 0.3s linear;
+}
+
+.logoScale {
+    min-height: 40px;
+    font-size: 20px;
 }
 
 .logo {
@@ -42,12 +48,23 @@
 }
 
 @media (max-width: 960px) {
-    .logoContainer {
-        position: fixed;
-        top: 1.5rem;
+    .wrapper {
+        min-height: 70px;
     }
 
     .isScrolled {
         min-height: 70px;
     }
+
+    .logoContainer {
+        position: fixed;
+        top: 1.3rem;
+        font-size: 20px;
+        min-height: 40px;
+    }
+
+    .logoScale {
+        font-size: 20px;
+    }
+
 }
