--- a/src/modules/Navigation/Navigation.module.css
+++ b/src/modules/Navigation/Navigation.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     z-index: 5;
-    transition: all 0.2s linear;
+    transition: min-height 0.2s linear;
 }
 
 .isScrolled {
