--- a/src/modules/Gallery/ui/components/SliderMain/SliderMain.module.css
+++ b/src/modules/Gallery/ui/components/SliderMain/SliderMain.module.css
@@ -1,17 +1,17 @@
 .slider {
     height: 100%;
-    overflow: visible !important;
+    max-width: 100vw;
     z-index: 2 !important;
     position: relative;
-    border: 1px solid red;
+
+    padding-left: 20px;
 }
 
 /* swiper wrapper */
-.slider>div {
+.slider>div:first-child {
     transition: var(--swiper-transition) !important;
     will-change: transform;
-    border: 1px solid red;
-    width: 100%;
+    max-width: 100vw;
 }
 
 .sliderItem {
