--- a/src/modules/GalleryRest/Gallery.module.css
+++ b/src/modules/GalleryRest/Gallery.module.css
@@ -151,8 +151,8 @@
     margin-right: 30px;
     object-fit: cover;
     object-position: 30% center;
-    /* 
-    transition: object-position 0.05s; */
+
+    transition: object-position 2000ms;
 }
 
 
