--- a/src/modules/Hero/ui/Hero.module.css
+++ b/src/modules/Hero/ui/Hero.module.css
@@ -37,6 +37,10 @@
     align-items: center;
 }
 
+.title {
+    font-size: 32px;
+}
+
 .list {
     min-height: 450px;
     list-style-type: none;
@@ -84,5 +88,11 @@
 
     .content {
         min-width: 0;
+    }
+}
+
+@media (max-width:480px) {
+    .title {
+        font-size: 23px;
     }
 }
