--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -1,14 +1,13 @@
 .wrapper {
     display: flex;
-    flex-direction: column;
-    display: flex;
     justify-content: center;
     align-items: center;
     user-select: none;
+    overflow: hidden;
 }
 
-@media (min-width:1025px) {
+@media (max-width:768px) {
     .wrapper {
-        flex-direction: row;
+        flex-direction: column;
     }
 }
