--- a/src/modules/Gallery/ui/components/ImagesGallery/ImagesGallery.module.css
+++ b/src/modules/Gallery/ui/components/ImagesGallery/ImagesGallery.module.css
@@ -38,30 +38,16 @@
 }
 
 .img {
-    min-width: 301px;
+    min-width: 300px;
     height: 447px;
     margin-right: 30px;
     object-fit: cover;
     will-change: object-position;
 }
 
-@media screen and (min-width: 2000px) {
-    .img {
-        min-width: 400px;
-        height: 550px;
-    }
-}
-
-@media screen and (max-width: 1150px) {
+@media (max-width: 768px) {
     .galleryImages {
         max-width: 100%;
-        margin: 5rem 0;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .img {
-        min-width: 240px;
-        height: 320px;
+        margin: 20px 0;
     }
 }
