--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,12 @@ body {
     color: var(--main-text-color);
     font-family: 'Montserrat', sans-serif;
     background-color: var(--main-bg-color);
-
     overflow-x: hidden;
+
 }
 
 :root {
+    scroll-behavior: smooth;
     /* Fonts */
     --font-xs: 12px;
     --font-sm: 14px;
