--- a/src/modules/Hero/ui/Hero.module.css
+++ b/src/modules/Hero/ui/Hero.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     width: 100%;
     height: 100%;
+    margin: 30px 0 50px;
 }
 
 .container {
@@ -11,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px 20px;
+    padding: 0 20px;
 }
 
 .imgContainer {
