--- a/src/modules/Main/ui/Main.module.css
+++ b/src/modules/Main/ui/Main.module.css
@@ -27,6 +27,8 @@
 }
 
 .description {
+    width: 60%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     text-align: center;
     font-size: 16px;
     line-height: 1;
