--- a/src/modules/Navigation/components/common/NavigationLink/NavigationLink.module.css
+++ b/src/modules/Navigation/components/common/NavigationLink/NavigationLink.module.css
@@ -18,7 +18,7 @@
 
 .undreline::after {
     background: none repeat scroll 0 0 transparent;
-    bottom: 10;
+    bottom: 2px;
     content: "";
     display: block;
     height: 2px;
