--- a/src/modules/Main/ui/Main.module.css
+++ b/src/modules/Main/ui/Main.module.css
@@ -46,3 +46,17 @@
     padding: 0;
     margin: 0 3px !important;
 }
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--modal-bg-color);
+    border-radius: 10px;
+}
