--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -1,14 +1,34 @@
 .wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     user-select: none;
     overflow: hidden;
-    margin: 50px 0 30px;
+    padding: 70px 0 50px;
 }
 
 @media (max-width:768px) {
     .wrapper {
         flex-direction: column;
     }
+}
+
+.title {
+    font-size: 48px;
+    line-height: 1;
+}
+
+.description {
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    font-size: 16px;
+    line-height: 1;
+    margin-bottom: 15px;
+    font-weight: 500;
+    letter-spacing: 5px;
+}
+
+.btnContainer {
+    display: flex;
 }
