--- a/src/modules/Main/ui/Main.module.css
+++ b/src/modules/Main/ui/Main.module.css
@@ -24,16 +24,17 @@
 .title {
     font-size: 48px;
     line-height: 1;
-    margin-bottom: 20px;
 }
 
 .description {
-    width: 60%;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     text-align: center;
     font-size: 16px;
     line-height: 1;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    font-weight: 500;
+    letter-spacing: 5px;
+
 }
 
 .btnContainer {
@@ -45,4 +46,10 @@
     height: 40px;
     padding: 0;
     margin: 0 3px !important;
+}
+
+@media(min-width: 481px) {
+    .title {
+        letter-spacing: 2.5px;
+    }
 }
