--- a/src/modules/Main/ui/Main.module.css
+++ b/src/modules/Main/ui/Main.module.css
@@ -48,15 +48,14 @@
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
-}
-
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+    width: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--modal-bg-color);
+    background: rgb(26, 26, 26);
     border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(22, 22, 22);
 }
