--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
     --font-title: 32px;
 
     /* Colors */
-    --main-bg-color: #0f061f;
+    --main-bg-color: #020006;
     --navbar-bg-color: #1f202923;
     --modal-bg-color: #101825;
     --main-text-color: #f1f1f1;
