--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     user-select: none;
     overflow: hidden;
-    padding: 70px 0 50px;
+    padding: 70px 0 20px;
 }
 
 @media (max-width:768px) {
@@ -15,8 +15,8 @@
 }
 
 .title {
-    font-size: 48px;
-    line-height: 1;
+    font-size: var(--font-title);
+    text-align: center;
 }
 
 .description {
@@ -29,6 +29,14 @@
     letter-spacing: 5px;
 }
 
-.btnContainer {
-    display: flex;
+.btn {
+    margin-top: 20px;
+
+}
+
+@media(min-width:481px) {
+    .btn {
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
 }
