--- a/src/modules/Hero/ui/Hero.module.css
+++ b/src/modules/Hero/ui/Hero.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     padding: var(--navbar-height) 0;
+    overflow: hidden;
 }
 
 .container {
@@ -36,6 +37,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .title {
