--- a/src/modules/Rules/ui/Rules.module.css
+++ b/src/modules/Rules/ui/Rules.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: var(--navbar-height) 0;
+    padding: var(--navbar-height) 20px;
 }
 
 .title {
