--- a/src/modules/common/components/NeonText/NeonText.module.css
+++ b/src/modules/common/components/NeonText/NeonText.module.css
@@ -3,6 +3,7 @@
     color: var(--main-text-color);
     font-family: "Yellowtail", sans-serif;
     letter-spacing: 4px;
+    font-size: 40px;
 }
 
 @keyframes flicker {
