--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import "~@fontsource/montserrat/index.css";
+@import "~@fontsource/montserrat/500.css";
+@import "~@fontsource/montserrat/700.css";
+
+
 * {
     margin: 0;
     padding: 0;
