--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "~@fontsource/montserrat/index.css";
 @import "~@fontsource/montserrat/500.css";
 @import "~@fontsource/montserrat/700.css";
+@import "~@fontsource/yellowtail/index.css";
 
 
 * {
