--- a/src/modules/common/components/VideoBg/VideoBg.module.css
+++ b/src/modules/common/components/VideoBg/VideoBg.module.css
@@ -7,3 +7,13 @@
     background: rgba(0, 0, 0, 0.65);
     z-index: 0;
 }
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.65);
+    z-index: 0;
+}
