--- a/src/modules/Gallery/ui/Gallery.module.css
+++ b/src/modules/Gallery/ui/Gallery.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     user-select: none;
     overflow: hidden;
-    padding: 70px 0 20px;
+    padding: 70px 0;
 }
 
 @media (max-width:768px) {
