--- a/src/modules/Hero/ui/Hero.module.css
+++ b/src/modules/Hero/ui/Hero.module.css
@@ -32,7 +32,6 @@
     width: 100%;
     max-width: 600px;
     min-width: 350px;
-    max-height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -85,6 +84,7 @@
 
     .imgContainer {
         margin: 30px;
+        justify-content: center;
     }
 }
 
